<resources>
    <string name="app_name">SoloLev</string>
    <string name="activity_login_username_hint_text">Användarnamn</string>
    <string name="activity_login_password_hint_text">Lösenord</string>
    <string name="activity_login_login_btn_text">Logga in</string>
    <string name="toast_login_error_message">Ogilltigt användarnamn eller lösenord.</string>
    <string name="activity_login_add_user_btn_text">Lägg till användare</string>
    <string name="toast_add_user_error_message">Användarnamnet används redan.</string>
    <string name="order_item_order_id_label">Order:</string>
    <string name="order_item_costumer_address_label">Till:</string>
    <string name="order_item_costumer_name_label">Namn:</string>
    <string name="order_item_costumer_phone_label">Telefon:</string>
    <string name="toast_add_user_success_message">Användare tillagd!</string>
    <string name="order_counter_status">ORDER_COUNTER_STATUS</string>
    <string name="customer_counter_status">CUSTOMER_COUNTER_STATUS</string>
    <string name="order_activity_deliver_btn_text">Leverera order</string>
    <string name="order_activity_delivered_date_label">Levererad datum:</string>
    <string name="title_activity_maps">Map</string>
    <string name="actionbar_settings_label">Inställningar</string>
    <string name="actionbar_toggle_label">Change displayed orders</string>
    <string name="settings_activity_new_orders_amount_label">Ordrar per uppdatering:</string>
    <string name="settings_new_orders_amount_status">SETTINGS_NEW_ORDERS_AMOUNT</string>
    <string name="settings_activity_phonenumber_label">Leveransbekräftelse:</string>
    <string name="settings_phonenumber_status">SETTINGS_PHONENUMBER</string>
    <string name="order_activity_sms_message">Order %d har blivit levererad.</string>
    <string name="actionbar_add_label">Lägg till ordrar</string>
    <string name="order_activity_goto_map_btn_label">See on Maps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
